--- a/QuickJob.Notifications.Api/QuickJob.Notifications.Api.csproj
+++ b/QuickJob.Notifications.Api/QuickJob.Notifications.Api.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\QuickJob.Notifications.BusinessLogic\QuickJob.Notifications.BusinessLogic.csproj" />
+      <ProjectReference Include="..\QuickJob.Notifications.Core\QuickJob.Notifications.Core.csproj" />
     </ItemGroup>
 
 </Project>
