--- a/Dockerfile.consumer
+++ b/Dockerfile.consumer
@@ -5,10 +5,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["QuickJob.Notifications.Consumer.csproj", "./"]
-RUN dotnet restore "QuickJob.Notifications.Consumer.csproj"
+COPY ["QuickJob.Notifications.Consumer/QuickJob.Notifications.Consumer.csproj", "QuickJob.Notifications.Consumer/"]
+RUN dotnet restore "QuickJob.Notifications.Consumer/QuickJob.Notifications.Consumer.csproj"
 COPY . .
-WORKDIR "/src/"
+WORKDIR "/src/QuickJob.Notifications.Consumer"
 RUN dotnet build "QuickJob.Notifications.Consumer.csproj" -c Release -o /app/build
 
 FROM build AS publish
